--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <script src="../config.js"></script>
 </head>
 <body>
   <div>asd</div>
+
 </body>
 </html>
