--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-  <script src="./app.config.js"></script>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <script src="./config.js"></script>
 </head>
 <body>
-  <div>asd</div>
+<div id="root"></div>
 </body>
 </html>
