--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <script src="./app.config.js"></script>
+  <script src="./app.config.js?hash=<%= htmlWebpackPlugin.options.configHash %>"></script>
 </head>
 <body>
 <div>asd</div>
