New react version based on vanila version

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <script src="./app.config.js?hash=<%= htmlWebpackPlugin.options.configHash %>"></script>
 </head>
 <body>
-<div>asd</div>
+  <div id="root">asd</div>
 </body>
 </html>
