--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <title>Title</title>
   <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon" />
-  <script src="./app.config.js?hash=<%= htmlWebpackPlugin.options.configHash %>"></script>
+  <script src="/app.config.js?hash=<%= htmlWebpackPlugin.options.configHash %>"></script>
 </head>
 <body>
 <div>asd</div>
