Use React.lazy instead of react-loadable

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <title>Title</title>
-  <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon" />
   <script src="/app.config.js?hash=<%= htmlWebpackPlugin.options.configHash %>"></script>
 </head>
 <body>
